docs/rip-afk/versions/v1.0/index.md
---
sidebar_label: v1.0.*
---

# RIP AFK v1.0.* Instructions {ignore}

## Gimmick Overview

This gimmick uses the [Non-Destructive Modular Framework](https://github.com/bdunderscore/ndmf) and [Modular Avatar](https://github.com/bdunderscore/modular-avatar) to **non-destructively** enable an avatar to turn into a stone monument when entering AFK state.

During the avatar build process, this gimmick performs the following operations:

- Disables any animation transitions in the Action and FX layers that include a condition where AFK is set to `true`.
- Searches the avatar for all objects that contain PhysBones, Contact Receivers, Renderers, Particle Systems, or Lights.
- Generates an AFK animation that disables all of the above objects except those explicitly excluded by the user.

### Notes

- This gimmick has only been tested with VRCSDK3 and Unity 2022.3.22f1.

### Known Issues

- When entering AFK state while in the air, if the stone monument lands before the avatar, the avatar’s viewpoint will slowly descend and rotate until reaching the ground.
- In instances with a large number of players, the local player’s AFK animation may not play when switching AFK states, though it will still appear correctly to other players.

<sub>Gimmick Overview end</sub>

---

## Installation

### Dependencies

This gimmick relies on the following Unity plugin. Make sure you have installed it before installing this gimmick.

- Modular Avatar (1.13.0 or higher): https://modular-avatar.nadena.dev/
- lilToon (1.8.3 or higher): https://lilxyzw.github.io/lilToon/#/

---

### Importing Unity Package

Drag `RIP AFK.unitypackage` into `Project` window, click the `Import` button on the dialog to import the package to your avatar project:

![Import](./Assets/Import.webp)

---

### Installing Gimmick

#### 1. Adding the Prefab to Scene

Find and drag `Assets/LuiStudio/AFKs/RIP/RIP AFK.prefab` from product window into your avatar inside hierarchy:

![Prefab_In_Avatar](./Assets/Prefab_In_Avatar.webp)

#### 2. Setting up the Gimmick

##### 1. Add Exclusions (Optional)

The AFK animation generated by this gimmick will disable all Meshes, PhysBones, Contact Receivers, Particle Systems, and Lights in the model.

If you need certain objects to remain unaffected while the AFK animation is playing, you can add them to the `Exclusions` array<sup>[1]</sup>:

![Exclusions](./Assets/Exclusions.webp)

:::warning

Objects added to the 'Exclusions' list, along with all of their child objects, will be excluded.

:::

##### 2. Modify the Stone (Optional)

The stone is hidden by default.
If you need to modify it, select `RIP AFK/Stone`<sup>[1]</sup> in the Hierarchy and check the box in the upper-left corner of the Inspector<sup>[2]</sup>:

![Enable_Stone](./Assets/Enable_Stone.webp)

###### Adjust Position and Scale (Optional)

Select `RIP AFK`<sup>[1]</sup> and use the `Move`, `Rotate`, and `Scale` tools<sup>[2]</sup> to adjust the position and size of the stone:

![Adjust_Position](./Assets/Adjust_Position.webp)

###### Add Custom Elements to the Stone (Optional)

If you’d like to add custom elements such as an `Audio Source` for the AFK state or display your own ID on the stone,
simply place your desired objects inside the `Stone` object and keep them enabled.

:::note

I’ve tried generating text meshes and rendering text textures via Camera during the NDMF build process,
but both methods failed.
If you have a way to generate custom stone text at build time, please contact us!

:::

###### Replace the Stone Model (Optional)

Select the `RIP AFK/Stone`<sup>[1]</sup> object and locate the `Mesh Filter` and `Mesh Renderer` components in the Inspector.

Replace the mesh in the `Mesh Filter` component<sup>[2]</sup> with the mesh of your custom model,
and replace the material in the `Mesh Renderer` component<sup>[3]</sup> with your desired material:

![Replace_Stone_Model](./Assets/Replace_Stone_Model.webp)

Next, find the `Box Collider` component and adjust its bounds to fit the new model.

:::warning

Do **not** directly replace the entire `Stone` object.
If you must replace it completely:

- Make sure the new object has the same components as the original `Stone` object.
- Switch the Inspector to **Debug** mode, select `RIP AFK`, and drag your new object into the `Stone Transform` field in the `RIP AFK Setup Tool` component.

:::

<sub>Installation end</sub>

---

## Testing

After installation, you can test it by entering **Play Mode**.

First, we need the `Gesture Manager`, which can be installed from the `VRChat Creator Companion`.

Once `Gesture Manager` is installed, click **Tools → Gesture Manager Emulator** in the Unity menu:

![Add_Gesture_Manager_Emulator](./Assets/Add_Gesture_Manager_Emulator.webp)

After clicking, a new GameObject named `GestureManager`<sup>[1]</sup> will be added to the scene.
Select it, go to the **Inspector**, and click **Enter Play-Mode**<sup>[2]</sup> in the `Gesture Manager` component to enter Play Mode:

![Enter_Play_Mode_With_Gesture_Manager](./Assets/Enter_Play_Mode_With_Gesture_Manager.webp)

After entering Play Mode, a circular action menu<sup>[1]</sup> will appear in the `Gesture Manager` component.
Click **Options → States → AFK**<sup>[2]</sup> to toggle the AFK state:

![Gesture_Manager_AFK](./Assets/Gesture_Manager_AFK.webp)

When you switch to the AFK state, if the Avatar disappears and a falling stone appears, it means the gimmick is functioning properly.

<sub>Testing end</sub>

---

## How to Use

Make sure that the Avatar’s AFK state detection is enabled:

- In **PC Mode**, press the **End** key on your keyboard to toggle the AFK state.
- In **VR Mode**, open the **SteamVR** menu to enter AFK mode.

When entering the AFK state, the Avatar will turn into a stone.

<sub>How to Use end</sub>
